--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "16.1.2",
+    "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.21.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
