--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/mdx": "^16.1.6",
     "gray-matter": "^4.0.3",
     "next": "16.1.2",
     "next-mdx-remote": "^5.0.0",
