--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/mdx": "^16.1.6",
     "gray-matter": "^4.0.3",
+    "moment": "^2.30.1",
     "next": "16.1.2",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
